Fix listbox overflowing with long options

--- a/components/02-form-elements/typeahead/_typeahead.scss
+++ b/components/02-form-elements/typeahead/_typeahead.scss
@@ -33,6 +33,13 @@
 
   &__listbox {
     width: 100%;
+
+    &:not(&--full-width) {
+      @include mq(s) {
+        width: $input-width;
+      }
+    }
+
     margin: 0;
     padding: 0;
     list-style: none;
